fixed chat error not showing errors, and removed error modal in chat window

--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -27,41 +27,3 @@ form{
     top: 95%;
     align-self: flex-end;
 }
-
-.modal {
-    background: $transparent-black-50;
-    width: 100%;
-    height: 100%;
-    padding: 10em 0 10em;
-    vertical-align: middle;
-  
-    .modal-top {
-      font-family: $roboto;
-      font-weight: 600;
-      font-size: 1.5em;
-      text-transform: capitalize;
-      color: $white;
-      background: $red-brown;
-      padding: 0.25em 0.5em;
-      position: relative;
-      border-top-left-radius: 3px;
-      border-top-right-radius: 3px;
-  
-      i {
-        position: absolute;
-        right: 0.25em;
-        top: 0.25em;
-        cursor: pointer;
-      }
-    }
-  
-    .modal-body {
-      font-family: $roboto;
-      font-weight: 400;
-      font-size: 1em;
-      color: $eerie-black;
-      background: $white;
-      padding: 0.5em;
-    }
-  }
-  
